--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"private": true,
 	"homepage": "http://timothywiliusa.github.io/digital-resume",
 	"dependencies": {
+		"-": "^0.0.1",
 		"@material-ui/styles": "^4.5.0",
-		"gh-pages": "^3.1.0",
+		"gh-pages": "^3.2.3",
 		"react": "^16.10.2",
 		"react-copy-to-clipboard": "^5.0.1",
 		"react-devicon": "^0.1.9",
@@ -14,6 +15,7 @@
 		"react-scripts": "3.2.0",
 		"react-sticky": "^6.0.3",
 		"react-tooltip": "^3.11.1",
+		"save-dev": "^0.0.1-security",
 		"semantic-ui-react": "^0.88.1"
 	},
 	"scripts": {
