--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"semantic-ui-react": "^0.88.1"
 	},
 	"scripts": {
-		"predeploy": "yarn build",
+		"predeploy": "yarn run build",
 		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
